同步于: 1月7日21时52分

--- a/pages/p5/958361.md
+++ b/pages/p5/958361.md
@@ -1,4 +1,4 @@
-### 经济和金融双重掣肘：如何破局？(图)
+### 日相称中国入CPTPP不易 阻止还是强调高标准？
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,11 +7,21 @@
 
 <div class="article_right" style="fone-color:#000">
  <p>
-  【看中国2020年11月11日讯】中国国家统计局公告，10月中国
-  <span href="https://www.secretchina.com/news/gb/tag/CPI" target="_blank">
-   CPI
-  </span>
-  同比上涨0.5%，创11年新低；10月中国CPI环比下跌0.3%，略有下降。全国工业生产者出厂价格（PPI）同比下降2.1%，环比为0。
+  【看中国2021年1月7日讯】新年伊始，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/日本" target="_blank">
+    日本
+   </span>
+  </strong>
+  首相
+  <strong>
+   菅义伟
+  </strong>
+  针对中国加入《全面与进步跨太平洋伙伴关系协定》（
+  <strong>
+   CPTPP
+  </strong>
+  ）表示，CPTPP的门槛很高，中国国营企业运营下是不太容易进入，中国以目前的现行体制要想加入没那么容易。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -30,11 +40,11 @@
   </div>
  </div>
  <p>
-  从环比来看，PPI平稳，而CPI下跌，或喻示部分
-  <span href="https://www.secretchina.com/news/gb/tag/通胀" target="_blank">
-   通胀
+  有关专家分析，
+  <span href="https://www.secretchina.com/news/gb/tag/菅义伟" target="_blank">
+   菅义伟
   </span>
-  因素被工厂（产能过剩恶性竞争）消化。从同比来看，CPI创逾10年新低，喻示债务无法稀释，内债压力恶化。
+  1月3日在日本放送广播电台节目中的这番表述实际上是面向国内舆论，力图挽回低迷的内阁支持率。能否阻止中国进军CPTTP还需要划一个问号。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -42,116 +52,32 @@
  </p>
  <p>
   <strong>
-   01 CPI同比大跌而环比微降
+   菅义伟发言意在国内
   </strong>
  </p>
  <p>
-  原因：
+  TPP自从2017年美国退出之后改名为《全面与进步跨太平洋伙伴关系协定》（CPTPP），目前拥有11个成员国，其中日本的国内生产总值（GDP）居首，在这个组织中拥有很大的影响力。
  </p>
  <p>
-  1）
-  <span href="https://www.secretchina.com/news/gb/tag/人民币" target="_blank">
-   人民币
+  2020年11月20日，中国国家主席
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
   </span>
-  持续几个月升值，猪肉等农产品进口量翻倍增长，输入性通缩因素会压制了价格上行，升值趋势延续与CPI环比下降0.3%较为匹配。
+  在亚太经合组织（APEC）峰会非正式会议上表示，中国积极考虑加入CPTPP。
  </p>
  <p>
-  2）CPI同比涨幅创逾10年新低，但环比仅微降0.3%，这种反差的形成主要影响因素是2019年4季度通胀基数较高，造成同比（与去年同期对比）剧烈下降，但环比数据（月度对比）波动微小。
- </p>
- <p>
-  两个原因来看，2019年4季度基数较高是影响10月通胀同比数据创出新低的主要原因。通胀下行有利于
-  <span href="https://www.secretchina.com/news/gb/tag/汇率" target="_blank">
-   汇率
+  日本的中国问题全球研究所（GRICI）所长远藤誉对美国之音说，菅义伟首相1月3日的言论实际上是面向国内舆论，目的是为了挽回他在
+  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+   武汉肺炎
   </span>
-  （减少进口），却不利于债务。
+  疫情防控以及国内其他事务处理的失策。虽然这一发言会得到国内右翼势力的支持，但是菅义伟政权背后最大的靠山，即被视为亲华派的自民党干事长二阶俊博不点头，菅义伟的发言也不会起到实际效果。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  <strong>
-   02 人民币制约有所减轻
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  1）内通胀因素。CPI同比数据得到控制，
-  <span href="https://www.secretchina.com/news/gb/tag/货币政策" target="_blank">
-   货币政策
-  </span>
-  制约有所下降。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2）汇率因素。自5月末开始，人民币货币政策收紧，导致热钱套息流入，驱动汇率升值。至11月份，人民币一度升值至6.5区间。价格变动本身是影响预期最直接的因素，这有利于改善人民币汇率预期，刺激海外资金惯性流入，惯性流入可以降低中美息差上的要求（已经从250基点降至235基点），有利于人民币货币政策放松。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="中国的货币政策目前已经陷入两难阶段" src="https://img3.secretchina.com/pic/2020/10-25/p2803291a142774062-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   中国的货币政策目前已经陷入两难阶段（图片来源：Adobe stock）
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  从央行表态来看，11月6日，央行副行长刘国强在答记者问时确认：“资金价格总体呈下降趋势，要有确定性的预期”。表态确认了
+  同时，菅义伟还不得不面对与
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  央行正试图放宽货币政策。背后是人民币汇率已超央行预期升值，10月份通胀同比创11年新低也有利于释放人民币货币政策空间。
+  有密切关系的日本经济。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -166,7 +92,7 @@
   </div>
  </center>
  <p>
-  央行的放水意向没有问题，但国际收支平衡挤压之下，放水空间存疑。
+  远藤誉所长指出，去年10月中国制定的《出口管制法》尽管被普遍视为是用以对抗美国，但是也不排除随时可以适用日本，对日本具有威慑力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,9 +107,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   03 双重掣肘
-  </strong>
+  日本媒体也普遍注意到中国的出口管制法可能对日本经济的影响。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -198,7 +122,7 @@
   </div>
  </center>
  <p>
-  包括中国在内新兴市场经济体总会受经济和金融双重掣肘。在多年来全球流动性宽松的背景下，新兴经济体外债水平都在不断上升。多数新兴市场经济体为出口导向，贸易依存度较高，疫情冲击打击本国优势产业，引发外需萎缩，可能加剧本币的贬值预期，会进一步增大了外债偿还压力。
+  日本放送协会（NHK）去年12月在中国正式实施出口管制法后报道称，日本企业普遍关注作为电动车以及家电等生产不可或缺的稀少资源稀土是否成为出口管制范围。原因是日本的稀土60%是从中国进口，中国一旦限制稀土出口日本，势必影响日本经济。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,37 +137,7 @@
   </div>
  </center>
  <p>
-  缓解问题需要进行利率上的拉升和通胀上的控制（否则就会导致进口增多，外汇流失）。这是土耳其、阿根廷等国家的本币利率都很高的原因，这也是中国自2020年5月末以来货币政策收紧的原因。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  （跨境）金融的掣肘让新兴经济体有加息和抑制通胀的压力。但多年的贸易依赖形成的内需低迷、产能过剩以及天量内债等因素，又需要以利率下行稳定经济、以全民通胀消化债务。经济掣肘让新兴经济体有降息和推升通胀的压力。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  新兴经济体的两难！
+  日本福井县立大学终身教授凌星光则认为，菅义伟的发言是中立性的，并没有“阻止”的意图，只是告知中国门槛不会降低。同时日本国内误以为中国加入CPTPP会失去领导权，菅义伟的发言只是反映了这一心态。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -259,7 +153,7 @@
  </center>
  <p>
   <strong>
-   04 中国能破局吗？
+   两难的对华外交
   </strong>
  </p>
  <center>
@@ -275,7 +169,7 @@
   </div>
  </center>
  <p>
-  2020年的1-5月份，中国央行选择了稳定经济，在两难问题上，很显然这会面临金融掣肘。可以发现在1-5月，人民币利率下行稳经济导致跨境金融遭受到较强压力，人民币汇率一路贬值，中美息差（贬值压力的数据量化）一路扩大。
+  日本共同社日前报道称，菅义伟对华外交陷入两难。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -290,7 +184,7 @@
   </div>
  </center>
  <p>
-  央行一再强调资金要进实体，对资金流入金融严防死守。一季度中国CPI超过5%，如果大量资金涌入实体显然会将通胀推得更高，但央行仍然要求资金要进实体，目的之一就是防范对跨境金融产生压力，这又会形成反向掣肘。而6-11月，央行选择的是稳金融，中国无风险利率迅速上行，十年国债收益率一升再升，两难问题将面临实体的掣肘。这必然会带来经济上、内债上的压力。
+  一方面中国国务委员兼外长王毅去年11月访问日本期间宣称尖阁诸岛（中国称钓鱼岛）是中国领土，并且强硬表示外国不应插嘴香港问题，而日本政府没有立即做出反驳遭到日本国内舆论谴责。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -305,7 +199,103 @@
   </div>
  </center>
  <p>
-  2020年11月6日上午10时，中国国务院政策例行吹风会，其中提及前三季度，商业银行实现净利润（银行的增量）15000亿元，但前三季度GDP增量（全部实体的增量）为9941亿人民币。所有实体增量加起来，比商业银行增量（利润）还少了5000亿。即全国实体埋头苦干三个季度，一算还不够商业银行利息。
+  但是，菅内阁也不能忘记中国是日本最大的贸易伙伴国。另外，日本还需要注意今后美国的动向。日本政府内部普遍认为，即使下届美国拜登政府上台，
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)政府的对华强硬路线也不见得会马上改变。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  今后日本政府在对华外交上必须灵活应对。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   中国周密的战略
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国问题全球研究所( GRICI）所长远藤誉认为，自从2017年美国退出TPP，中国就开始为加入TPP策划周密的战略，并且一步步实施。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在中国看来，美国退出TPP后，TPP的严格条件有所降低，在其附属条款以及第五、第九、第十等多个章节中对中国相当不利的的条款都变成“停止适用”，加入的门槛有所降低。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  远藤誉所长进一步指出，让中国得到实实在在收获的莫过于去年11月签署的《区域全面经济伙伴关系协定》（RCEP）。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  RCEP签署的背景是在武汉肺炎疫情扩散全球，只有中国经济呈现V字增长情况下，东盟各国选边中国，放弃了“美国优先”的川普政权。中国在RCEP的15个成员国中，其国内生产总值（GDP）占据首位，发言权也自然最大。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -324,7 +314,7 @@
   </ins>
  </center>
  <p>
-  强调一下，实体投入的是人财物，而不只是财（银行贷款只是财）；商业银行也只是金融机构之一而不是全部。更夸张的是，商行利润1.5万亿，这是在金融对实体让利1.25万亿之后实现的。这种背景之下，如果没有较高的通胀来稀释实体债务压力，债务风险已经十分严峻，贷款应延尽延政策（风险推后）一旦结束，恐怕马上就会爆发风险。
+  日本法政大学研究生院教授真壁昭夫也在RCEP签署后发文指出，RCEP成功签署的背后受到中国的影响，可以认为在国际社会凸显孤立的中国试图以RCEP为契机在亚洲地区增强存在感，提升对抗美国的力量。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -339,7 +329,7 @@
   </div>
  </center>
  <p>
-  或正是因为风险如此逼近，在跨境金融风险有所缓解的情况下，央行正试图放宽货币政策。中美十年国债利差已经从10月中旬的250基点附近下行至235基点，显示出稳金融（稳外债）向稳经济（稳内债）切换的迹象。
+  面对日本国内对于RCEP引发的中国威胁论，有不同看法认为，应该看到日本在RCEP中获利。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -354,7 +344,7 @@
   </div>
  </center>
  <p>
-  但意外发生！……
+  经济评论家加谷珪一在《新闻周刊》撰文指出，对于国际竞争力很高的日本，可以在RCEP中获得很大的利益。当然，在国际交涉中不排除谁来掌握主导权的政治考量，但是争夺霸权不是自由贸易协定的目的。中国虽然是大国，但是目前在亚洲最具竞争力的是日本，为此在RCEP中最大的受益者也是日本。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -369,7 +359,9 @@
   </div>
  </center>
  <p>
-  随着辉瑞新冠疫苗重大突破，十年美债收益率迅速飙高，目前已经创出自2020年以来的新高。这种情况影响之下，中国无风险利率是否还具有下行空间又成疑问！
+  <strong>
+   中国能否成功加入？日本是否坚持阻止？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -384,7 +376,7 @@
   </div>
  </center>
  <p>
-  如果不能顺利放松货币政策，如果不能驱动通胀上行，内债压力如何破局？
+  旅日华人媒体人莫邦富针对RCEP在杂志“钻石”上发文指出，RCEP的签署意味着中国突破了备受威胁的《跨太平洋伙伴关系协定》（TPP）包围网。如果美国拜登政权上台，美国有可能回归TPP，而在拜登政权上台前成功签署了RCEP，对于中国来说这不仅意味着突破了包围网，也可视为获得了对抗美国的一个筹码。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -399,7 +391,7 @@
   </div>
  </center>
  <p>
-  小结：
+  中国问题全球研究所（GRICI）所长远藤誉认为，还应该注意到2020年底完成的中欧投资协定谈判。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -414,7 +406,7 @@
   </div>
  </center>
  <p>
-  经济和（跨境）金融双重掣肘之下：内债要么通胀稀释，要么违约刚爆；都将遭遇（跨境）金融掣肘；
+  她指出，无论是RCEP还是中欧投资协定都可以说是中国为加入CPTPP的一个布石，不过在国有企业以及知识产权等问题上，中国加入CPTPP还有一段路要走。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -429,7 +421,9 @@
   </div>
  </center>
  <p>
-  外债要么加息稳定，将遭遇经济掣肘；要么违约刚爆，将遭遇金融掣肘。
+  <strong>
+   今后日本在中国加入CPTPP问题上会采取什么立场
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -444,41 +438,7 @@
   </div>
  </center>
  <p>
-  破局已失去了可能性，风险爆发是一种必然。而CPI同比创出10年新低，迅速放大了内债压力！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  日本福井县立大学终身教授凌星光对美国之音说，菅义伟政权的对华政策尚未确定，正在看美国拜登正式上台后的对华政策。日本国内基本上有两派，重安全保障派和重经济派，政治家和媒体属于前者多，经济界属于后者多。今后美国拜登上台后与中国对话协调的可能性大，为此日本舆论今后也有可能发生变化。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -491,6 +451,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:辛荷
+来源:
+   <span href="/news/gb/tag/美国之音  ">
+    美国之音
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41JR"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -508,13 +506,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952124.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952124.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952124.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/11/952124.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/958361.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/958361.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/958361.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/07/958361.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/952124.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/958361.md' width='0px' height='0px'/>
