--- a/pages/nsc412/n12671553.md
+++ b/pages/nsc412/n12671553.md
@@ -50,6 +50,21 @@
  以下是实时更新内容（美东时间）：
 </h4>
 <p>
+ 08：02
+</p>
+<p>
+ 川普总统的前参幕僚长兼北爱尔兰特使米克·穆尔瓦尼（Mick Mulvaney）已经辞职。
+</p>
+<p>
+ 他今天早上在接受CNBC采访时说，他昨晚打电话给国务卿蓬佩奥（Mike Pompeo） 辞职。
+</p>
+<p>
+ 07：31
+</p>
+<p>
+ 周三在国会大厦内枪杀的女士的身份被确定。巴比特（Ashli Babbitt）女士曾在空军服役过4次，居住在圣地亚哥，她是川普总统的支持者。
+</p>
+<p>
  06：12
 </p>
 <p>
