--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -114648,4 +114648,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01072202)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01072251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
