--- a/pages/nf4514/n12671553.md
+++ b/pages/nf4514/n12671553.md
@@ -58,14 +58,6 @@
 <p>
  他今天早上在接受CNBC采访时说，他昨晚打电话给国务卿蓬佩奥（Mike Pompeo） 辞职。
 </p>
-<figure class="wp-caption aligncenter" id="attachment_12673584" style="width: 600px">
- <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1203946382.jpg">
-  <img alt="" class="size-large wp-image-12673584" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1203946382-600x400.jpg"/>
- </ok>
- <br/><figcaption class="wp-caption-text">
-  图为米克·穆尔瓦尼（Mick Mulvaney）。(Samuel Corum/Getty Images)
- </figcaption><br/>
-</figure><br/>
 <p>
  07：31
 </p>
@@ -103,7 +95,7 @@
  05：21
 </p>
 <p>
- 拜登提名梅里克·加兰（Merrick Garland）为司法部长，并将在周四晚些时候在特拉华州威尔明顿的活动中，把他介绍给美国公众。
+ 周四晚些时候，拜登将在特拉华州威尔明顿的活动中，把他提名的总检察长梅里克·加兰（Merrick Garland）介绍给美国公众。
 </p>
 <p>
  川普总统今天没有在他的公共日程上公布任何活动。
@@ -139,16 +131,8 @@
  03：33
 </p>
 <p>
- 在星期四凌晨，美国国会认证乔·拜登的选举团人票胜出。
+ 在星期三凌晨，美国国会认证乔·拜登的选举团人票胜出。
 </p>
-<figure class="wp-caption aligncenter" id="attachment_12673586" style="width: 600px">
- <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230462993.jpg">
-  <img alt="" class="size-large wp-image-12673586" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230462993-600x400.jpg"/>
- </ok>
- <br/><figcaption class="wp-caption-text">
-  周四，国会认证拜登胜选。(J. Scott Applewhite – Pool/Getty Images)
- </figcaption><br/>
-</figure><br/>
 <p>
  03：18
 </p>
