--- a/pages/nf4514/n12671553.md
+++ b/pages/nf4514/n12671553.md
@@ -50,6 +50,18 @@
  以下是实时更新内容（美东时间）：
 </h4>
 <p>
+ 10:00
+</p>
+<p>
+ 一位高级政府官员告诉CNN，商务部负责情报和安全的副助理部长约翰·科斯特洛（John Costello）已经在昨天国会山的暴乱后辞职。
+</p>
+<p>
+ 09：29
+</p>
+<p>
+ 共和党众议员布鲁克斯（Mo Brooks）发推文说，请大家不要跟假媒体一样急于对国会大厦遭袭做出判断，请等待调查，越来越多的证据表明，是安提法通过巧妙的暴民控制手段，精心策划了这次袭击。
+</p>
+<p>
  08：02
 </p>
 <p>
