同步于: 1月8日1时2分

--- a/pages/nf4514/n12671553.md
+++ b/pages/nf4514/n12671553.md
@@ -50,6 +50,15 @@
  以下是实时更新内容（美东时间）：
 </h4>
 <p>
+ 10:30
+</p>
+<p>
+ 美国国防官员告诉CNN，几个州和哥伦比亚特区正在动员大约6,200名国民警卫队队员前往华盛顿特区。正在从外州调遣的警卫队包括1,000名来自纽约州、500名来自马里兰州和500名来自新泽西州。
+</p>
+<p>
+ 华盛顿特区国民警卫队周三也启动了1,100名成员，协助应对国会大厦的暴乱。
+</p>
+<p>
  10:00
 </p>
 <p>
