--- a/pages/nf4514/n12671553.md
+++ b/pages/nf4514/n12671553.md
@@ -50,6 +50,38 @@
  以下是实时更新内容（美东时间）：
 </h4>
 <p>
+ 11:53
+</p>
+<p>
+ 白宫周四发表声明，对在周三暴力事件中的死伤者表示慰问。
+ <br/>
+ “白宫对昨天发生的生命损失感到悲痛，并向他们的家人和亲人表示慰问，”发言人贾德·迪尔（Judd Deere）说。 “我们也继续为那些受伤的人祈祷，希望他们能尽快康复。”
+</p>
+<p>
+ 11:35
+</p>
+<p>
+ 在周四的一篇博客中，脸书首席执行官马克·扎克伯格（Mark Zuckerberg）宣布，在本周美国国会大厦发生暴力事件后，脸书将“无限期”禁止美国总统川普使用其平台。扎克伯格称，该禁令不会在拜登就职日之前解除。
+</p>
+<p>
+ 11:30
+</p>
+<p>
+ 美国国会警察（USCP）周四发表声明称，开枪击中一名女子并致死的USCP警员正在停职，等待调查结果。
+</p>
+<p>
+ USCP在声明中还证实，周三在国会广场附近发现了两枚管状炸弹和一辆可疑车辆，警方进行了回应，并确定这两种装置事实上是危险的。
+</p>
+<p>
+ 11:00
+</p>
+<p>
+ 华盛顿DC市长发言人表示，在国会大厦暴乱后，特区警方周三晚上抓捕了68人。
+</p>
+<p>
+ 华盛顿特区市长穆里尔·鲍瑟（Muriel Bowser）美国东部时间下午6点起实施宵禁。大部分被捕者因违反宵禁规定而被捕。其他指控包括持武器指控和非法进入。
+</p>
+<p>
  10:30
 </p>
 <p>
