--- a/pages/nf4514/n12671553.md
+++ b/pages/nf4514/n12671553.md
@@ -65,6 +65,21 @@
  “拒绝暴力，（任意）定罪会适得其反。Antifa参与（暴力事件）不能成借口，它跟川普团队的价值观自相矛盾。”朱利安尼写道。
 </p>
 <h3>
+ 贺锦丽称闯入国会的是极端分子 而夏季上街骚动是和平示威者
+</h3>
+<p>
+ 当选副总统贺锦丽7日下午在特拉华皇后剧院发言说：“我们看到两种司法制度，一种是让极端分子冲进美国国会大厦，另一种是去年夏天向和平示威者释放催泪弹……我们知道这是不可接受的。我们知道我们应该做到这一点。比这更好。”
+</p>
+<p>
+ 夏季的抗议活动起源于5月底非裔男子弗洛伊德（George Floyd）疑因警方不当压制方式致死。事件迅速点燃全美各地以争取种族平权的“黑人的命也是命”（Black Lives Matter）的示威运动。
+</p>
+<p>
+ 对涉嫌执法过当导致弗洛伊德死亡的明尼苏达州警察德里克·肖文（Derek Chauvin被指控二级谋杀；现场的三名警官被控协助和怂恿谋杀。
+</p>
+<p>
+ 随着示威运动在美国各地展开，打砸商店等暴力、纵火和抢劫事件不断发生，美国多个城市都曾施行连续多日的宵禁。
+</p>
+<h3>
  德州众议员诉彭斯案被最高院驳回
 </h3>
 <p>
