--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -114726,4 +114726,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01081102)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01081151)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
