--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -114744,4 +114744,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01081402)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01081452)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
