--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -114750,4 +114750,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01081502)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01081551)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
