--- a/pages/nsc412/n12671553.md
+++ b/pages/nsc412/n12671553.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【更新】川普被噤声后首次放出视频发言" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/000_8YB2U9-600x400.jpg"/>
 <div class="caption">
- 周三（1月6日），美国国会召开联席会议期间，国会内发生暴力冲突，认证过程中断。议员们计划晚间恢复会议。图为国会大厦外面的防爆警察。 (Photo by KEVIN DIETSCH / POOL / AFP)
+ 周三（1月6日），美国国会召开联席会议期间，国会内发生暴力冲突，认证过程中断。议员们计划晚间恢复会议。图为国会大厦外面的防暴警察。(KEVIN DIETSCH/POOL/AFP)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
