同步于: 1月8日21时2分

--- a/pages/nsc418/n12675453.md
+++ b/pages/nsc418/n12675453.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【疫情更新1.8】研究：疫苗似能预防变种病毒" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/146185.jpg"/>
+<div><img alt="【疫情更新1.8】美单日死亡数突破四千人" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/146185.jpg"/>
 <div class="caption">
  图为辉瑞公司研发生产的COVID-19（中共病毒）疫苗示意图。(JOEL SAGET/AFP via Getty Images)
 </div></div><hr/>
