--- a/pages/nf4514/n12675453.md
+++ b/pages/nf4514/n12675453.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2021年01月08日讯】（大纪元记者陈霆综合报导）根据约翰·霍普金斯大学的数据，周四（7日）美国至少新增了27万4703起确诊病例，此外，又有4085人不幸病故，这个数字再次刷新了美国的单日死亡人数纪录，也是美国首次单日死亡数突破4000人。
+ 【大纪元2021年01月08日讯】（大纪元记者陈霆、徐简综合报导）根据约翰·霍普金斯大学的数据，周四（7日）美国至少新增了27万4703起确诊病例，此外，又有4085人不幸病故，这个数字再次刷新了美国的单日死亡人数纪录，也是美国首次单日死亡数突破4000人。
 </p>
 <p>
  其中，加州
