--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -114816,4 +114816,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01090202)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01090251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
