--- a/pages/nsc412/n12676021.md
+++ b/pages/nsc412/n12676021.md
@@ -55,6 +55,36 @@
  以下是1月8日（美东时间）国会大厦冲突事件发展，以及美国大选相关内容的实时更新。
 </p>
 <p>
+ 13：05
+</p>
+<p>
+ 众议院议长佩洛西的一明助手周五说，在周三美国国会大厦遭袭期间，佩洛西办公室的一台笔记本电脑被盗。
+</p>
+<p>
+ 这名助手说，笔记本电脑放在一间会议室，用于演示。他拒绝提供更多细节。
+</p>
+<p>
+ 12：42
+</p>
+<p>
+ 川普总统的法律团队自行结束了多起寻求挑战乔治亚州2020年大选结果的诉讼。
+</p>
+<p>
+ 以总统为原告的两起案件中，川普竞选团队的律师提交了自愿撤诉的通知，称由于“庭外和解协议”，他们要求法院驳回案件。
+</p>
+<p>
+ 乔治亚州州务卿布拉德·拉芬斯珀格（Brad Raffensperger）的律师对此表示，他们并不反对自愿撤诉，但认为双方之间没有和解协议。
+</p>
+<p>
+ 12：33
+</p>
+<p>
+ 参议院国土安全委员会和规则委员会联合宣布，他们将就国会大厦周三遇袭前的安保失误举行听证会。
+</p>
+<p>
+ “对国会大厦的攻击就是对每个美国人的攻击。我们计划对这些可怕的事件进行监督并举行两党听证会，共同努力进行必要的改革，以确保这种情况不再发生。”两个委员会的主席和副主席在一份声明中写道。
+</p>
+<p>
  12：10
 </p>
 <p>
@@ -104,6 +134,18 @@
 </p>
 <p>
  之后他发帖说，“（致）那些问过我的人，我不会在1月20日参加就职（典礼）。”
+</p>
+<p>
+ 11：43
+</p>
+<p>
+ 司法部长提名人梅里克·加兰（Merrick Garland）周四表示，如果被参议院确认，他将监督一个独立的司法部。
+</p>
+<p>
+ 加兰在新闻发布会上讲述了他的第一份工作是如何在几十年前协助时任司法部长本·科里内蒂（Ben Civiletti）。
+</p>
+<p>
+ 加兰说，科里内蒂寻求将“确保各部门遵守法治的规范”变成书面政策。
 </p>
 <p>
  11：42
