--- a/pages/nsc418/n12675453.md
+++ b/pages/nsc418/n12675453.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新1.8】美单日死亡人数突破四千" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230374203-600x400.jpg"/>
+<div><img alt="【疫情更新1.8】白宫：恐存在美版毒株 传播更快" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/corona-5174671_1920-600x400-1.jpg"/>
 <div class="caption">
- 周四（1月7日）美国至少新增27万4703起确诊病例以及4,085人染疫死亡。图为2020年12月31日新年除夕，加利福尼亚州惠提尔（Whittier, California）公墓的一处葬礼，人们为死于Covid-19的58岁的吉尔伯托·阿雷金·卡马乔（Gilberto Arreguin Camacho）送葬。加州是最近美国的疫情中心，死亡和确诊人数不断攀升。（PATRICK T. FALLON/AFP via Getty Images）
+ 图为中共病毒（武汉肺炎）示意图。（Pixabay）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
