--- a/pages/nsc418/n12675453.md
+++ b/pages/nsc418/n12675453.md
@@ -1,4 +1,4 @@
-### 【疫情更新1.8】美单日死亡人数突破四千
+### 【疫情更新1.8】白宫：恐存在美版毒株 传播更快
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -44,6 +44,74 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 白宫：恐存在美版毒株 传播更快
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12674860" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/corona-5174671_1920-600x400-1.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12674860" src="https://i.epochtimes.com/assets/uploads/2021/01/corona-5174671_1920-600x400-1-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  图为
+  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
+   中共病毒
+  </ok>
+  （
+  <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+   武汉肺炎
+  </ok>
+  ）示意图。（Pixabay）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 白宫中共病毒特别工作组在1月3日提交给各州的最新报告中说，美国可能拥有自己版本的变种毒株，传播更快，恐使已经在迅速传播的病毒越发火上浇油。
+</p>
+<p>
+ “这个秋冬（疫情数字）增长是春、夏季增长的两倍。这种加速表明，除了已经在我们社区中传播开来的英国变种之外，可能还有美国变种在这里展开，传播性或增加50％。”CNN表示。
+</p>
+<p>
+ 该工作组呼吁通过戴口罩，并尽可能多地立即接种疫苗等措施“积极缓解…以匹配更具攻击性的病毒。”
+</p>
+<p>
+ “美国仍然处于每周140-150,000例确诊和疑似COVID（中共病毒）住院人数以及120-125,000名住院病例的高位。尽管假日期间测试率较低，但从加利福尼亚州整个太阳带（Sunbelt）直至东南部、中大西洋和东北部的（疫情）显着持续恶化，表明社区传播迅速。”
+</p>
+<p>
+ 本周，加利福尼亚州是每10万人中新发病例最多的州。其余位居前十名中的分别为亚利桑那州、堪萨斯州、田纳西州、罗德岛州、犹他州、阿肯色州、西弗吉尼亚州、乔治亚州和马萨诸塞州。
+</p>
+<p>
+ 俄克拉荷马州的阳性测试率最高，预示着病例即将增加。其次是内华达州、亚利桑那州、犹他州、爱达荷州、弗吉尼亚州、田纳西州、乔治亚州、南卡罗来纳州和阿拉巴马州。
+</p>
+<p>
+ 阿肯色州每100张住院床位占用率最高。其次是亚利桑那州、马里兰州、俄克拉荷马州、乔治亚州、肯塔基州、加利福尼亚州、哥伦比亚特区、南卡罗来纳州和新墨西哥州。
+</p>
+<p>
+ 另外，堪萨斯州每10万人的死亡人数最多。其次是怀俄明州，宾夕法尼亚州，新墨西哥州，阿肯色州，印第安纳州，密西西比州，亚利桑那州，田纳西州和罗德岛州。
+</p>
+<h3>
+ 美政府用预付借记卡发放纾困金 本周已开始
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12148776" style="width: 711px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/05/Economic-Impact-Card-1.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12148776" src="https://i.epochtimes.com/assets/uploads/2020/05/Economic-Impact-Card-1-711x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  美国国税局（IRS）将会通过一张借记卡向部分美国人发放疫情补助款。（示意图）（CFPB）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 美国财政部国税局（IRS）本周开始将新一轮中共病毒（武汉肺炎）救助方案中600美元的纾困金发放给大约800万美国人。这笔钱以预付借记卡的形式寄到受助人手上。
+</p>
+<p>
+ 中共病毒大流行，美国经济和个人因防疫锁定措施受到重创。IRS在周四（1月7日）的一份新闻稿中说，这些卡将寄给那些在过去一周未收到这笔款项的受助人。
+</p>
+<p>
+ “IRS和财政部敦促尚未收到直接存款的合格人士在此期间密切关注他们的邮件。”IRS在一份声明中说。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/21/1/8/n12676166.htm" rel="noopener noreferrer" target="_blank">
+  详情请阅全文。
+ </ok>
+</p>
+<h3>
  秘鲁发现首例英国变种毒株感染者
 </h3>
 <p>
@@ -61,12 +129,16 @@
 <h3>
  丹麦限制来自所有国家的游客 以遏制疫情
 </h3>
-<p>
- 丹麦外交大臣杰普·科弗德（Jeppe Kofod）（Jeppe Kofod）周五（1月8日）说，丹麦将对来自世界其它地区的游客实行入境限制，以遏止冠状病毒（
- <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
-  中共病毒
+<figure class="wp-caption aligncenter" id="attachment_12676490" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230481127.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12676490" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230481127-600x400.jpg"/>
  </ok>
- ）传播。
+ <br/><figcaption class="wp-caption-text">
+  中共病毒（武汉肺炎）大流行。2021年1月8日，丹麦外交大臣耶普·科弗德（Jeppe Kofod）就本国祭出的旅行限制召开新闻发布会。(EMIL HELMS/Ritzau Scanpix/AFP via Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 丹麦外交大臣杰普·科弗德（Jeppe Kofod）（Jeppe Kofod）周五（1月8日）说，丹麦将对来自世界其它地区的游客实行入境限制，以遏止冠状病毒（中共病毒）传播。
 </p>
 <p>
  丹麦当局还建议从周六开始，禁止所有出国旅行。
@@ -248,11 +320,7 @@
  日本疫情严峻 菅义伟发布紧急宣言
 </h3>
 <p>
- 日本的中共病毒（
- <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
-  武汉肺炎
- </ok>
- ）疫情升温，首相菅义伟当地时间1月7日发布“紧急事态宣言”，这是疫情爆发以来第二度发布，上一次是去年4月7日由当时首相安倍晋三所发布。
+ 日本的中共病毒（武汉肺炎）疫情升温，首相菅义伟当地时间1月7日发布“紧急事态宣言”，这是疫情爆发以来第二度发布，上一次是去年4月7日由当时首相安倍晋三所发布。
 </p>
 <p>
  日本首都圈包括东京都、埼玉县、千叶县、神奈川县，这些地区从1月8日起进入紧急状态，预计到2月7日为止。
