--- a/pages/nsc418/n12675453.md
+++ b/pages/nsc418/n12675453.md
@@ -44,14 +44,32 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
- 两百多人死亡 新泽西退伍军人养老院被调查
+ 美CDC：逾半染疫者由无症状患者传染
 </h3>
 <p>
- 据NorthJersey.com周一（1月4日）报导，新泽西州总检察长办公室已经召集了一个大陪审团，正在调查由州政府管理、已经有200多人死于
+ 美国疾病控制和预防中心（CDC）的一个新模型显示，超过一半
  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
   中共病毒
  </ok>
- 大流行的退伍军人养老院，渎职者可能面临刑事指控。
+ （冠状病毒）感染者都是由无症状患者传染的。
+</p>
+<p>
+ 周四发表在《美国医学会杂志网络公开》（JAMA Network Open）上的模型显示，估计59%的中共病毒感染者由无症状者传染，包括24%的染疫者由从未出现COVID-19症状者传染，和35%的染疫者由“症状前（Pre-symptomatic）”患者传染。一些人最初没有表现出症状，但最终会出现症状，在症状出现之前的时期被称为“症状前”。
+</p>
+<p>
+ “这项研究的结果表明，仅识别和隔离有症状的COVID-19患者将无法控制SARS-CoV-2（中共病毒）的持续传播。”研究人员在描述他们的研究结果时写道。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/21/1/8/n12676778.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 两百多人死亡 新泽西退伍军人养老院被调查
+</h3>
+<p>
+ 据NorthJersey.com周一（1月4日）报导，新泽西州总检察长办公室已经召集了一个大陪审团，正在调查由州政府管理、已经有200多人死于中共病毒大流行的退伍军人养老院，渎职者可能面临刑事指控。
 </p>
 <p>
  2020年10月23日，州总检察长办公室下属的医疗补助欺诈控制办公室发出的传票和信件要求新泽西帕拉姆斯退伍军人养老院（New Jersey Veterans Home at Paramus）向调查人员提供一连串文件和记录，并可能要求他们在大陪审团面前作证。
