同步于: 1月9日12时52分

--- a/pages/nsc412/n12676021.md
+++ b/pages/nsc412/n12676021.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【更新】被推特永久取消账号 川普回应" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/trump-january-6-1200x800-600x400.jpg"/>
 <div class="caption">
- 推特宣布永久移除川普的账号(Photo by Tasos Katopodis/Getty Images)
+ 推特宣布永久移除川普的个人账号，川普做出回应，表示考虑建立自己的平台。(Photo by Tasos Katopodis/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -53,6 +53,18 @@
 </p>
 <p>
  以下是1月8日（美东时间）国会大厦冲突事件发展，以及美国大选相关内容的实时更新。
+</p>
+<p>
+ 10：05
+</p>
+<p>
+ 推特公司告诉CNN，川普竞选团队的账号被永久冻结。
+</p>
+<p>
+ 推特发言人说：“正如我们所说，使用另一个账户试图逃避封号违反我们的规则。
+</p>
+<p>
+ “我们已经永久地冻结了川普竞选团队账号。”他补充说。
 </p>
 <p>
  9：50
