--- a/pages/nsc412/n12676021.md
+++ b/pages/nsc412/n12676021.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【更新】被推特永久取消账号 川普回应" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/trump-january-6-1200x800-600x400.jpg"/>
 <div class="caption">
- 推特宣布永久移除川普的个人账号，川普做出回应，表示考虑建立自己的平台。(Photo by Tasos Katopodis/Getty Images)
+ 推特宣布永久移除川普的个人账号，川普做出回应，表示考虑建立自己的平台。(Tasos Katopodis/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
