--- a/indexes/p3.md
+++ b/indexes/p3.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看民生](S看民生.md) 
-
+#### [川普宣布不参加20日白宫典礼 3小时40多万点赞(图)](../pages/p3/958517.md) 
+#### [川普为干一件大事 深深激怒了那群政客(图)](../pages/p3/958504.md) 
+#### [虽然又冷又暗 它却是退休族最幸福国家(图)](../pages/p3/958489.md) 
+#### [火爆华人圈的螺狮粉 竟是中共海外统战武器(组图)](../pages/p3/958491.md) 
+#### [视频：川普支持者阻安提法破窗入国会大厦(图/视频)](../pages/p3/958449.md) 
+#### [史上最严厉封锁？全民禁足3个月 违者狠罚(图)](../pages/p3/958393.md) 
+#### [2021最佳饮食排行榜出炉 看看哪种适合你(图)](../pages/p3/958505.md) 
+#### [川普宣布不参加20日白宫典礼 3小时40多万点赞(图)](../pages/p3/958517.md) 
+#### [加国官员发视频掩饰外出旅游 作假尴尬辞职(图)](../pages/p3/958516.md) 
+#### [国会认证日后 美国染疫死亡人数骤升(图)](../pages/p3/958512.md) 
+#### [川普为干一件大事 深深激怒了那群政客(图)](../pages/p3/958504.md) 
+#### [加女买房前发现信用零分 原因居然是这个(图)](../pages/p3/958506.md) 
+#### [虽然又冷又暗 它却是退休族最幸福国家(图)](../pages/p3/958489.md) 
+#### [“世界最倒霉笨贼” 作案时报警抓自己(图)](../pages/p3/958503.md) 
+#### [偷带生物研究试管出境 哈佛中国学者被判刑(图)](../pages/p3/958500.md) 
+#### [火爆华人圈的螺狮粉 竟是中共海外统战武器(组图)](../pages/p3/958491.md) 
+#### [视频：川普支持者阻安提法破窗入国会大厦(图/视频)](../pages/p3/958449.md) 
+#### [史上最严厉封锁？全民禁足3个月 违者狠罚(图)](../pages/p3/958393.md) 
+#### [加拿大开始发出父母和祖父母移民邀请(图)](../pages/p3/958395.md) 
+#### [美海关截获近15000件来自中国假证件(图)](../pages/p3/958388.md) 
+#### [美国男子一年打300份工 还清5万美元学贷(图)](../pages/p3/958390.md) 
+#### [-16℃舔钢管会冻住？熊孩子亲身实验悲剧了(图)](../pages/p3/958375.md) 
+#### [亚裔被白人领养努力学中文 17年后却傻眼了(图)](../pages/p3/958369.md) 
+#### [买菜小心！华人10天出门1次也中招(图)](../pages/p3/958293.md) 
+#### [他在家种“摇钱树” 一片叶赚1.6万美元(图)](../pages/p3/958283.md) 
+#### [男子修房屋 意外发现墙内70年前讯息(图)](../pages/p3/958266.md) 
