--- a/indexes/p4.md
+++ b/indexes/p4.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看博谈](S看博谈.md) 
-
+#### [警滥捕 港人逃亡 舞照跳 武肺施虐(图)](../pages/p4/958515.md) 
+#### [1月6日国会暴力事件是一个阴谋(图)](../pages/p4/958522.md) 
+#### [我参加了1月6日华盛顿DC百万人和平集会(图)](../pages/p4/958521.md) 
+#### [陶杰：民主哲学的谜惑(图)](../pages/p4/958511.md) 
+#### [我们不会屈服 不会忘记(图)](../pages/p4/958409.md) 
+#### [西方国家必须高度重视香港问题(图)](../pages/p4/958420.md) 
+#### [川普四年来为美国做了什么？(视频)](../pages/p4/958564.md) 
+#### [警滥捕 港人逃亡 舞照跳 武肺施虐(图)](../pages/p4/958515.md) 
+#### [李怡：丢掉幻想 直面现实(图)](../pages/p4/958513.md) 
+#### [1月6日国会暴力事件是一个阴谋(图)](../pages/p4/958522.md) 
+#### [我参加了1月6日华盛顿DC百万人和平集会(图)](../pages/p4/958521.md) 
+#### [美国将成为一党专制的国家？(图)](../pages/p4/958514.md) 
+#### [陶杰：民主哲学的谜惑(图)](../pages/p4/958511.md) 
+#### [2021的15预言 拜登当选可能应验大灾难(视频)](../pages/p4/958476.md) 
+#### [世界各地出现火流星 下个月六星连珠灾难真的要来了(视频)](../pages/p4/958465.md) 
+#### [我们不会屈服 不会忘记(图)](../pages/p4/958409.md) 
+#### [西方国家必须高度重视香港问题(图)](../pages/p4/958420.md) 
+#### [华府暴雨前夕风满楼(图)](../pages/p4/958394.md) 
+#### [国安法青面獠牙 香港人绝地求生(图)](../pages/p4/958396.md) 
+#### [外资对中共要天真到几时？(图)](../pages/p4/958392.md) 
+#### [改变性别词汇 是对人性的毁灭(图)](../pages/p4/958380.md) 
+#### [看到美国的这一幕！多少美国人哭了！美国保重！(视频)](../pages/p4/958315.md) 
+#### [陶杰：澳洲大学僵尸化(图)](../pages/p4/958313.md) 
+#### [中欧投资协定 当代绥靖主义的极致版本(图)](../pages/p4/958312.md) 
+#### [习近平不是极左问题 是安全感问题(图)](../pages/p4/958310.md) 
+#### [【百年百首咏史】七十一：江青四人帮(图)](../pages/p4/958289.md) 
