--- a/pages/nsc418/n12675453.md
+++ b/pages/nsc418/n12675453.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【疫情更新1.8】白宫：恐存在美版毒株 传播更快" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/corona-5174671_1920-600x400-1.jpg"/>
 <div class="caption">
- 图为中共病毒（武汉肺炎）示意图。（Pixabay）
+ 中共病毒（武汉肺炎）示意图。(Pixabay)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
