--- a/pages/nf4514/n12677428.md
+++ b/pages/nf4514/n12677428.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新1.9】中国六天七省进入战时状态" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230476414-600x400.jpg"/>
+<div><img alt="【疫情更新1.9】法国总统夫人曾染疫" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229024293-600x400.jpg"/>
 <div class="caption">
- 2021年1月8日，人群在北京的临时疫苗接种中心接种疫苗。 (STR/CNS/AFP via Getty Images)
+ 2020年10月12日，法国第一夫人碧姬·马克龙（Brigitte Macron）在凡尔赛附近的勒斯奈（Le Chesnay）的一所学校，向学生梦发表讲话，以支持欧洲白细胞萎缩症协会（ELA）。（Photo by THOMAS COEX/POOL/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
