--- a/pages/nsc412/n12676021.md
+++ b/pages/nsc412/n12676021.md
@@ -55,6 +55,35 @@
  以下是1月9日（美东时间）国会大厦冲突事件发展，以及美国大选相关内容的实时更新。
 </p>
 <p>
+ 8:45
+</p>
+<p>
+ 众议院少数党领袖麦卡锡(Kevin McCarthy)周五表示，弹劾川普总统将进一步分裂美国，呼吁当选总统拜登化解紧张局势，把这个国家团结起来。
+</p>
+<p>
+ “在仅剩12天的情况下弹劾总统，只会让我们的国家更加分裂。我今天已经联系了当选总统拜登，并计划与他谈谈我们必须如何共同努力降温，并把这个国家团结起来解决美国的挑战，”麦卡锡在推特发表声明说。
+</p>
+<p>
+ 8:11
+</p>
+<p>
+ 住房和城市发展部部长本·卡森（Ben Carson）周五表示，他没有与任何人谈论使用第25条修正案来解除川普总统的职务。
+</p>
+<figure class="wp-caption aligncenter" id="attachment_12677622" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1269207617.jpg">
+  <img alt="" class="size-large wp-image-12677622" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1269207617-600x506.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  住房和城市发展部部长本·卡森（Ben Carson）资料照。(Photo by Drew Angerer/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ “作为一个国家，我们需要愈合。我没有和任何人谈论过援引第25条修正案，我专注于完成提高美国被遗忘男女的（生活条件），”卡森在一条推文中说。
+</p>
+<p>
+ “是时候走向和平了。我们不是彼此的敌人！”他说。
+</p>
+<p>
  8:00
 </p>
 <p>
