--- a/pages/nf4514/n12676021.md
+++ b/pages/nf4514/n12676021.md
@@ -55,6 +55,44 @@
  以下是1月9日（美东时间）国会大厦冲突事件发展，以及美国大选相关内容的实时更新。
 </p>
 <p>
+ 9:00
+</p>
+<p>
+ 周三（1月6日）国会山暴力事件导致警员布莱恩·西尼克（Brian Sicknick）受伤不治，最终失去生命。西尼克的家人表示，西尼克的死亡不应该被政治化。
+</p>
+<p>
+ “关于周三事件的许多细节和西尼克受伤的直接原因仍然未知，我们的家人要求公众和媒体尊重我们的愿望，不要将布莱恩的去世作为一个政治问题，”西尼克的兄弟肯·西尼克（Ken Snickick）在一份声明中说。“请尊重布莱恩的生命和服务，并尊重我们的隐私。”
+</p>
+<p>
+ 8:45
+</p>
+<p>
+ 众议院少数党领袖麦卡锡(Kevin McCarthy)周五表示，弹劾川普总统将进一步分裂美国，呼吁当选总统拜登化解紧张局势，把这个国家团结起来。
+</p>
+<p>
+ “在仅剩12天的情况下弹劾总统，只会让我们的国家更加分裂。我今天已经联系了当选总统拜登，并计划与他谈谈我们必须如何共同努力降温，并把这个国家团结起来解决美国的挑战，”麦卡锡在推特发表声明说。
+</p>
+<p>
+ 8:11
+</p>
+<p>
+ 住房和城市发展部部长本·卡森（Ben Carson）周五表示，他没有与任何人谈论使用第25条修正案来解除川普总统的职务。
+</p>
+<figure class="wp-caption aligncenter" id="attachment_12677622" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1269207617.jpg">
+  <img alt="" class="size-large wp-image-12677622" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1269207617-600x506.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  住房和城市发展部部长本·卡森（Ben Carson）资料照。(Photo by Drew Angerer/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ “作为一个国家，我们需要愈合。我没有和任何人谈论过援引第25条修正案，我专注于完成提高美国被遗忘男女的（生活条件），”卡森在一条推文中说。
+</p>
+<p>
+ “是时候走向和平了。我们不是彼此的敌人！”他说。
+</p>
+<p>
  8:00
 </p>
 <p>
@@ -493,7 +531,7 @@
   13:05
  </p>
  <p>
-  众议院议长佩洛西的一明助手周五说，在周三美国国会大厦遭袭期间，佩洛西办公室的一台笔记本电脑被盗。
+  众议院议长佩洛西的一名助手周五说，在周三美国国会大厦遭袭期间，佩洛西办公室的一台笔记本电脑被盗。
  </p>
  <p>
   这名助手说，笔记本电脑放在一间会议室，用于演示。他拒绝提供更多细节。
