--- a/pages/nf4514/n12677428.md
+++ b/pages/nf4514/n12677428.md
@@ -1,4 +1,4 @@
-### 【疫情更新1.9】中国六天七省进入战时状态
+### 【疫情更新1.9】法国总统夫人曾染疫
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -41,8 +41,16 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
- 法国总统夫人染疫
+ 法国总统夫人曾染疫
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12487234" style="width: 581px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229024293.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12487234" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229024293-581x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年10月12日，法国第一夫人碧姬·马克龙（Brigitte Macron）在凡尔赛附近的勒斯奈（Le Chesnay）的一所学校，向学生梦发表讲话，以支持欧洲白细胞萎缩症协会（ELA）。（Photo by THOMAS COEX/POOL/AFP via Getty Images）
+ </figcaption><br/>
+</figure><br/>
 <p>
  法国电台Europe 1和France Info周六（1月9日）报导，法国总统伊曼纽尔·马克龙（Emmanuel Macron）的妻子在12月底做COVID-19（
  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
